--- a/Week-04-exercise-02/style.css
+++ b/Week-04-exercise-02/style.css
@@ -50,6 +50,7 @@ main>p {
     border: 1px solid rgba(0, 0, 0, 0.25);
     background-color: #fafafa;
     padding: 16px;
+    flex-basis: 300px;
 }
 
 .collection-card img {
