--- a/Week-04-exercise-02/style.css
+++ b/Week-04-exercise-02/style.css
@@ -43,6 +43,7 @@ main>p {
 
 .collection-grid {
     margin: 48px 0;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
@@ -51,6 +52,7 @@ main>p {
     border: 1px solid rgba(0, 0, 0, 0.25);
     background-color: #fafafa;
     padding: 16px;
+    display: flex;
     flex-basis: 300px;
 }
 
