--- a/Week-04-exercise-02/style.css
+++ b/Week-04-exercise-02/style.css
@@ -44,7 +44,7 @@ main>p {
 .collection-grid {
     margin: 48px 0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .collection-card {
